--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
 version: '2'
+
 services:
   web:
     build: .
+    image: gregsilcox/cashflow
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - .:/cashflow
+      - bundler:/bundle
     ports:
       - "3000:3000"
+
+volumes:
+  bundler:
+
+# docker-compose build web
+# docker-compose run web bundle install --path /bundle
+# docker-compose run rails db:migrate
+# docker-compose up
