--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,18 @@ version: '2'
 
 services:
   web:
-    build: .
-    image: gregsilcox/cashflow
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    image: gregsilcox/cashtrickle:1.0
+    command: rails s -b '0.0.0.0'
     volumes:
       - .:/cashflow
       - bundler:/bundle
     ports:
-      - "3000:3000"
+      - "3003:3000"
+    depends_on:
+      - redis
+
+  redis:
+    image: redis
 
 volumes:
   bundler:
